# social-sports

./: .gitignore  README.md
berlin_demographics_data/: berlin_sport_space_map.py
data_prep/: pyproject.toml  sentinel_demo.ipynb
rooftop_detection/: .gitignore  PITCH.md  README.md  SETUP.md  STREAMLIT_README.md  Textdokument (neu).txt  app.py  copernicus_credentials.json.template  requirements.txt  run_calisthenics_detection.py
rooftop_detection/docs/: architecture.md  calisthenics-dusseldorf-plan.md  data-pipeline.md  data-structure-explained.md  dusseldorf-known-parks.md  getting-started-copernicus.md  ndvi-explained.md
rooftop_detection/results/: compress_geojson.py  create_map.py
rooftop_detection/rooftop_detection/: README.md  __init__.py  requirements.txt  rooftop_detector.py  test_demo.py  visualize_rooftops.py
rooftop_detection/src/: calisthenics_detector_dusseldorf.py  calisthenics_detector_real_osm.py  complete_calisthenics_detector.py  debug_detection.py  osm_integration.py  sentinel2_data_access.py  sentinel_hub_catalog.py  sports_detector.py  test_calisthenics_detector.py  test_osm_expanded.py  test_sentinel2_auth.py  test_sentinel2_fixed.py
visualize/: README.md  app.py  convert-tif-to-geojson.py  download-soccer-fields.py  justfile  main.py  pyproject.toml  test-app-square.py  test-overplot-geojson.py  utils_regrid.py  utils_to_grid.py  utils_to_map.py
visualize/test_scripts/: test-choropleth.py  test-overlay-rooftops.py  test-overpass-restaurants.py
