[project]
name = "visualize"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "folium>=0.20.0",
    "gdal<3.12",
    "geopandas>=1.1.1",
    "ipykernel>=7.1.0",
    "overpass>=0.7.2",
    "overpy>=0.7",
    "pandas>=2.3.3",
    "rasterio>=1.4.3",
]
